{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 10,
  "lineage": "16c2179d-a0d6-3fd5-eb2a-ca6e51338ad6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:731670664560:instance/i-08c70740bc08ec0ba",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c70740bc08ec0ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tera",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04db41215359ce81f",
            "private_dns": "ip-10-0-52-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.52.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04d6e3a707bcd4679",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-005a37c1903dbed69"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb6187729807d505",
            "tags": {
              "Name": "FlaskAppInstance"
            },
            "tags_all": {
              "Name": "FlaskAppInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005a37c1903dbed69"
            ]
          },
          "dependencies": [
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-env-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731670664560:internet-gateway/igw-0e9c119e797cc8242",
            "id": "igw-0e9c119e797cc8242",
            "owner_id": "731670664560",
            "tags": {
              "Name": "test-env-gw"
            },
            "tags_all": {
              "Name": "test-env-gw"
            },
            "vpc_id": "vpc-047797ac17238f091"
          },
          "dependencies": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-test-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731670664560:route-table/rtb-00c57af0769d0700e",
            "id": "rtb-00c57af0769d0700e",
            "owner_id": "731670664560",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9c119e797cc8242",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-env-route-table"
            },
            "tags_all": {
              "Name": "test-env-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-047797ac17238f091"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-env-gw",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2cf7d2f744ca653",
            "route_table_id": "rtb-00c57af0769d0700e",
            "subnet_id": "subnet-0cb6187729807d505"
          },
          "dependencies": [
            "aws_internet_gateway.test-env-gw",
            "aws_route_table.route-table-test-env",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731670664560:security-group/sg-005a37c1903dbed69",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005a37c1903dbed69",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-all-sg",
            "name_prefix": "",
            "owner_id": "731670664560",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047797ac17238f091"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-uno",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731670664560:subnet/subnet-0cb6187729807d505",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb6187729807d505",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731670664560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-047797ac17238f091"
          },
          "dependencies": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731670664560:vpc/vpc-047797ac17238f091",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c4dc9c414a563b07",
            "default_route_table_id": "rtb-04c3fd5c071ece322",
            "default_security_group_id": "sg-0f6adf29e22e8a311",
            "dhcp_options_id": "dopt-06a3c2fa84802c851",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-047797ac17238f091",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04c3fd5c071ece322",
            "owner_id": "731670664560",
            "tags": {
              "Name": "test-env"
            },
            "tags_all": {
              "Name": "test-env"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testenv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731670664560:vpc/vpc-00f104c68b5365122",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f3cec2d3bc8bfd56",
            "default_route_table_id": "rtb-0e46a1f90f812e28c",
            "default_security_group_id": "sg-08f9266274d3dab32",
            "dhcp_options_id": "dopt-06a3c2fa84802c851",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00f104c68b5365122",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e46a1f90f812e28c",
            "owner_id": "731670664560",
            "tags": {
              "Name": "test-env"
            },
            "tags_all": {
              "Name": "test-env"
            }
          }
        }
      ]
    }
  ]
}